--- a/src/main/resources/static/addstudent.html
+++ b/src/main/resources/static/addstudent.html
@@ -25,7 +25,7 @@
         电话：   <pre>       <input class="addStudent" type="text" name="sphone"></pre>
         学号：   <pre>       <input class="addStudent" type="text" name="snumber"></pre>
         出生年月:<pre>       <input class="addStudent" type="date" name="sbrithday"></pre>
-        <pre>      <input class="add1" type="button" value="取消" id="qx">                <input class="add1" type="submit" value="提交" id="true"></pre>
+        <pre>      <input class="add1" type="button" value="取消" id="qx" onclick="window.location.href='/student-list.html'">                <input class="add1" type="submit" value="提交" id="true"></pre>
     </form>
 </div>
 </body>
