--- a/src/main/resources/static/drom-add.html
+++ b/src/main/resources/static/drom-add.html
@@ -6,6 +6,19 @@
     <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
     <script type="text/javascript" src="/lib/layer/2.4/layer.js"></script>
     <script type="text/javascript" src="/lib/laypage/1.2/laypage.js"></script>
+    <script>
+        $(function (){
+            $.get("/college/xyAll",function (data) {
+                console.log(data)
+                var list = JSON.parse(data);
+                var str1 = "";
+                for (var i = 0; i < list.length; i++) {
+                    str1 = "<option value='" + list[i].id + "'>" + list[i].xyName + "</option>"
+                    $("#xy").append(str1);
+                }
+            })
+        })
+    </script>
     <style>
         .adddrom{
             width: 200px;
@@ -24,14 +37,19 @@
 <body>
 <div id="adddrom01" style="display:block">
     <form action="/drom/adddrom" method="get">
-        宿舍分类： <pre>       <select class="adddrom"><option>男生公寓</option><option>女生公寓</option></select></pre>
-        宿舍楼号： <pre>       <input class="adddrom" type="text" name="itype"></pre>
-        宿舍楼层： <pre>       <input class="adddrom" type="text" name="isort"></pre>
-        宿舍号：   <pre>       <input class="adddrom" type="text" name="itime"></pre>
-        学院：     <pre>       <select class="adddrom" type="text" name="iauthor"></select></pre>
-        专业：     <pre>       <select class="adddrom" type="text" name="iauthor"></select></pre>
-        班级：     <pre>       <select class="adddrom" type="text" name="iauthor"></select></pre>
-        宿舍成员： <pre>       <input class="adddrom" type="text" name="iauthor"></pre>
+        宿舍分类： <pre>       <select class="adddrom" name="dtype"><option>男生公寓</option><option>女生公寓</option></select></pre>
+        宿舍楼号： <pre>       <input class="adddrom" type="text" name="dnumber" placeholder="请输入宿舍楼号"></pre>
+        宿舍楼层： <pre>       <input class="adddrom" type="text" name="dfloor" placeholder="请输入宿舍楼层"></pre>
+        宿舍号：   <pre>       <input class="adddrom" type="text" name="dnumber1" placeholder="请输入宿舍号"></pre>
+        学院：     <pre>       <select class="adddrom" type="text" name="dxy" id="xy" onchange="select()"><option>请选择学院</option></select></pre>
+        专业：     <pre>       <select class="adddrom" type="text" name="dzy" id="zy" onchange="ZYchange()"><option>请选择专业</option></select></pre>
+        班级：     <pre>       <select class="adddrom" type="text" name="dclass" id="cla" ><option>请选择班级</option></select></pre>
+        宿舍成员： <pre>       <input class="adddrom" type="text" name="dprople" placeholder="请输入宿舍成员"></pre>
+                   <pre>       <input class="adddrom" type="text" name="dprople1" placeholder="请输入宿舍成员"></pre>
+                  <pre>       <input class="adddrom" type="text" name="dprople2" placeholder="请输入宿舍成员"></pre>
+                  <pre>       <input class="adddrom" type="text" name="dprople3" placeholder="请输入宿舍成员"></pre>
+                  <pre>       <input class="adddrom" type="text" name="dprople4" placeholder="请输入宿舍成员"></pre>
+                  <pre>       <input class="adddrom" type="text" name="dprople5" placeholder="请输入宿舍成员"></pre>
         <pre>      <input class="add1" type="button" value="取消" id="qx" onclick="window.location.href='/drom-list.html'">                <input class="add1" type="submit" value="提交" id="true"></pre>
     </form>
 </div>
@@ -46,4 +64,38 @@
 
 </script>-->
 </body>
+<script>
+    function select() {
+        console.log($("#xy").val())
+        if($("#xy").val()=="请选择学院"){
+            $("#zy  option").remove("");
+            $("#zy").append("<option>请选择专业</option>")
+            $("#cla  option").remove("");
+            $("#cla").append("<option>请选择班级</option>")
+            return;
+        }
+        $("#zy  option").remove("");
+        $.get("/college/zyAll1",{"cid":$("#xy").val()},function (data) {
+            console.log(data)
+            var list=JSON.parse(data);
+            var str1="";
+            for (var i=0;i<list.length;i++){
+                str1="<option value='"+list[i].id+"'>"+list[i].zyName+"</option>"
+                $("#zy").append(str1);
+            }
+        })
+    }
+    function ZYchange() {
+        $("#cla  option").remove("");
+        $.get("/college/claAll1",{"classid":$("#zy").val()},function (data) {
+            console.log(data)
+            var list=JSON.parse(data);
+            var str1="";
+            for (var i=0;i<list.length;i++){
+                str1="<option value='"+list[i].id+"'>"+list[i].cname+"</option>"
+                $("#cla").append(str1);
+            }
+        })
+    }
+</script>
 </html>
