--- a/src/main/resources/static/coures-list.html
+++ b/src/main/resources/static/coures-list.html
@@ -20,32 +20,37 @@
     <script type="text/javascript" src="/lib/DD_belatedPNG_0.0.8a-min.js" ></script>
     <script>DD_belatedPNG.fix('*');</script>
     <![endif]-->
-    <title>图片列表</title>
+    <title>课程列表</title>
     <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
     <script>
         $(function () {
             var tmp1="";
             $.ajax({
                 type: "GET",
-                url: "/drom/selectAll",
+                url: "/image/selectAll",
                 dataType: "json",
                 success: function(data){
                     $("#count").text(data.length)
                     console.log(data)
                     $.each(data,function (index,obj) {
+                        if(obj.itype==0){
+                            tmp1="校园美景";
+                        }else if(obj.itype==1){
+                            tmp1="学生风采";
+                        }else{
+                            tmp1="校园通知";
+                        }
+                        console.log(obj.iurl)
                         $("tbody").append("<tr class=\"text-c\">" +
                             "<td><input name='' type='checkbox' value=''></td>" +
                             "<td>"+(index+1)+"</td>" +
-                            "<td>"+obj.dtype+"</td>" +
-                            "<td>"+obj.dnumber+"</td>" +
-                            "<td>"+obj.dfloor+"</td>" +
-                            "<td>"+obj.dnumber1+"</td>" +
-                            "<td>"+obj.dxy+"</td>" +
-                            "<td>"+obj.dzy+"</td>" +
-                            "<td>"+obj.dclass+"</td>" +
-                            "<td>"+obj.dprople+"&nbsp;"+obj.dprople1+"&nbsp;"+obj.dprople2+"&nbsp;"+obj.dprople3+"&nbsp;"+obj.dprople4+"&nbsp;"+obj.dprople5+"</td>" +
-                            "<td>"+obj.dstatus+"</td>" +
-                            "<td style='width: 150px'>&nbsp;<button>修改</button>&nbsp;&nbsp;&nbsp;<button>删除</button></td>" +
+                            "<td>"+tmp1+"</td>" +
+                            "<td><img src="+obj.iurl+" style='width: 50px;height: 30px'></td>" +
+                            "<td>"+obj.idescribe+"</td>" +
+                            "<td>"+obj.isort+"</td>" +
+                            "<td>"+obj.itime+"</td>" +
+                            "<td>"+obj.istatus+"</td>" +
+                            "<td><button>选择</button>&nbsp;&nbsp;&nbsp;<button>修改</button>&nbsp;&nbsp;&nbsp;<button>删除</button></td>" +
                             "</tr>")
                     })
                 }
@@ -63,22 +68,19 @@
         <input type="text" name="" id="" placeholder=" 图片名称" style="width:250px" class="input-text">
         <button name="" id="" class="btn btn-success" type="submit"><i class="Hui-iconfont">&#xe665;</i> 搜图片</button>
     </div>
-    <div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="l"><a href="javascript:;" onclick="datadel()" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a> <a class="btn btn-primary radius"  href="/drom-add.html"><i class="Hui-iconfont">&#xe600;</i> 添加宿舍</a></span> <span class="r">共有数据：<strong><span id="count"></span></strong> 条</span> </div>
+    <div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="l"><a href="javascript:;" onclick="datadel()" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a> <a class="btn btn-primary radius"  href="/picture-add.html"><i class="Hui-iconfont">&#xe600;</i> 添加图片</a></span> <span class="r">共有数据：<strong><span id="count"></span></strong> 条</span> </div>
     <div class="mt-20">
         <table class="table table-border table-bordered table-bg table-hover table-sort">
             <thead>
             <tr class="text-c">
                 <th width="40"><input name="" type="checkbox" value=""></th>
-                <th width="40">序号</th>
+                <th width="80">序号</th>
                 <th width="100">分类</th>
-                <th width="40">宿舍楼号</th>
-                <th width="40">宿舍楼层</th>
-                <th width="80">宿舍号</th>
-                <th width="150">学院</th>
-                <th width="60">专业</th>
-                <th width="100">班级</th>
-                <th width="400">宿舍成员</th>
-                <th width="60">状态</th>
+                <th width="100">封面</th>
+                <th width="200">图片描述</th>
+                <th width="80">排序值</th>
+                <th width="150">更新时间</th>
+                <th width="60">发布状态</th>
                 <th width="100">操作</th>
             </tr>
             </thead>
