--- a/src/main/resources/static/vedio.html
+++ b/src/main/resources/static/vedio.html
@@ -8,7 +8,7 @@
 <form action="#" method="post">
     <video></video>
 </form>
-<video width="320" height="240" controls="controls" autoplay="autoplay">
+<video width="320" height="240" controls="controls" >
     <source src="/11171.mp4" type="video/mp4" />
 </video>
 <img src="/rourou.jpg"  width="320" height="240">
