--- a/src/main/resources/static/coures-list.html
+++ b/src/main/resources/static/coures-list.html
@@ -24,33 +24,25 @@
     <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
     <script>
         $(function () {
-            var tmp1="";
             $.ajax({
                 type: "GET",
-                url: "/image/selectAll",
+                url: "/scores/selectAll",
                 dataType: "json",
                 success: function(data){
                     $("#count").text(data.length)
                     console.log(data)
                     $.each(data,function (index,obj) {
-                        if(obj.itype==0){
-                            tmp1="校园美景";
-                        }else if(obj.itype==1){
-                            tmp1="学生风采";
-                        }else{
-                            tmp1="校园通知";
-                        }
-                        console.log(obj.iurl)
                         $("tbody").append("<tr class=\"text-c\">" +
                             "<td><input name='' type='checkbox' value=''></td>" +
                             "<td>"+(index+1)+"</td>" +
-                            "<td>"+tmp1+"</td>" +
+                            "<td>"+obj.stype+"</td>" +
                             "<td><img src="+obj.iurl+" style='width: 50px;height: 30px'></td>" +
-                            "<td>"+obj.idescribe+"</td>" +
-                            "<td>"+obj.isort+"</td>" +
-                            "<td>"+obj.itime+"</td>" +
-                            "<td>"+obj.istatus+"</td>" +
-                            "<td><button>选择</button>&nbsp;&nbsp;&nbsp;<button>修改</button>&nbsp;&nbsp;&nbsp;<button>删除</button></td>" +
+                            "<td>"+obj.sadress+"</td>" +
+                            "<td>"+obj.steacher+"</td>" +
+                            "<td>"+obj.slevel+"</td>" +
+                            "<td>"+obj.sclass+"</td>" +
+                            "<td>"+obj.sstatus+"</td>" +
+                            "<td><button>修改</button>&nbsp;&nbsp;&nbsp;<button>删除</button></td>" +
                             "</tr>")
                     })
                 }
@@ -59,16 +51,16 @@
     </script>
 </head>
 <body>
-<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 图片管理 <span class="c-gray en">&gt;</span> 图片列表 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
+<nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 课程管理 <span class="c-gray en">&gt;</span> 课程列表 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
 <div class="page-container">
     <div class="text-c"> 日期范围：
         <input type="text" onfocus="WdatePicker({ maxDate:'#F{$dp.$D(\'logmax\')||\'%y-%M-%d\'}' })" id="logmin" class="input-text Wdate" style="width:120px;">
         -
         <input type="text" onfocus="WdatePicker({ minDate:'#F{$dp.$D(\'logmin\')}',maxDate:'%y-%M-%d' })" id="logmax" class="input-text Wdate" style="width:120px;">
-        <input type="text" name="" id="" placeholder=" 图片名称" style="width:250px" class="input-text">
-        <button name="" id="" class="btn btn-success" type="submit"><i class="Hui-iconfont">&#xe665;</i> 搜图片</button>
+        <input type="text" name="" id="" placeholder=" 课程名称" style="width:250px" class="input-text">
+        <button name="" id="" class="btn btn-success" type="submit"><i class="Hui-iconfont">&#xe665;</i> 搜课程</button>
     </div>
-    <div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="l"><a href="javascript:;" onclick="datadel()" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a> <a class="btn btn-primary radius"  href="/picture-add.html"><i class="Hui-iconfont">&#xe600;</i> 添加图片</a></span> <span class="r">共有数据：<strong><span id="count"></span></strong> 条</span> </div>
+    <div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="l"><a href="javascript:;" onclick="datadel()" class="btn btn-danger radius"><i class="Hui-iconfont">&#xe6e2;</i> 批量删除</a> <a class="btn btn-primary radius"  href="/coures-add.html"><i class="Hui-iconfont">&#xe600;</i> 添加课程</a></span> <span class="r">共有数据：<strong><span id="count"></span></strong> 条</span> </div>
     <div class="mt-20">
         <table class="table table-border table-bordered table-bg table-hover table-sort">
             <thead>
@@ -77,10 +69,11 @@
                 <th width="80">序号</th>
                 <th width="100">分类</th>
                 <th width="100">封面</th>
-                <th width="200">图片描述</th>
-                <th width="80">排序值</th>
-                <th width="150">更新时间</th>
-                <th width="60">发布状态</th>
+                <th width="200">出版社</th>
+                <th width="80">任课教师</th>
+                <th width="150">学习阶段</th>
+                <th width="60">班级</th>
+                <th width="40">状态</th>
                 <th width="100">操作</th>
             </tr>
             </thead>
