--- a/src/main/resources/static/coures-add.html
+++ b/src/main/resources/static/coures-add.html
@@ -3,27 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
 </head>
 <body>
 <form action="/image/addimg" method="post" enctype="multipart/form-data">
     课程名：
     <pre>       <input class="addimage" type="text" name="ititle"></pre>
-    图片栏目：
+    课程分类：
     <pre>       <input class="addimage" type="text" name="itype"></pre>
-    排序值：
+    出版社：
     <pre>       <input class="addimage" type="text" name="isort"></pre>
-    发布日期：
+    任课教师：
     <pre>       <input class="addimage" type="text" name="itime"></pre>
-    图文作者：
+    学习阶段：
     <pre>       <input class="addimage" type="text" name="iauthor"></pre>
-    图文描述：
+    学习班级：
     <pre>       <textarea style="width: 200px;height: 200px" name="idescribe"></textarea></pre>
-
+     图书封面：  <p>
+    图片上传前预览：<input type="file" id="xdaTanFileImg" onchange="xmTanUploadImg(this)" accept="image/*" style="display: none"/>
+    <input type="button" value="隐藏图片" onclick="document.getElementById('xmTanImg').style.display = 'none';"/>
+    <input type="button" value="显示图片" onclick="document.getElementById('xmTanImg').style.display = 'block';"/>
+</p>
+    <label for="xdaTanFileImg"><img src="/img/upfile.jpg" id="xmTanImg1" style="width: 200px;height: 200px"/></label>
+    <img id="xmTanImg"/>
+    <div id="xmTanDiv"></div>
     <pre>      <input class="add1" type="button" value="取消" id="qx"
-                      onclick="window.location.href='/picture-list.html'">                <input class="add1"
+                      onclick="window.location.href='/coures-list.html'">                <input class="add1"
                                                                                                  type="submit"
                                                                                                  value="提交"
                                                                                                  id="true"></pre>
 </form>
 </body>
+<script>
+    //选择图片，马上预览
+    function xmTanUploadImg(obj) {
+        var file = obj.files[0];
+        var reader = new FileReader();
+
+        //读取文件过程方法
+        reader.onloadstart = function (e) {
+            console.log("开始读取....");
+        }
+        reader.onprogress = function (e) {
+            console.log("正在读取中....");
+        }
+        reader.onabort = function (e) {
+            console.log("中断读取....");
+        }
+        reader.onerror = function (e) {
+            console.log("读取异常....");
+        }
+        reader.onload = function (e) {
+            console.log("成功读取....");
+
+            var img = document.getElementById("xmTanImg");
+            img.src = e.target.result;
+            //或者 img.src = this.result;  //e.target == this
+        }
+
+        reader.readAsDataURL(file)
+    }
+</script>
 </html>
