--- a/src/main/resources/static/welcome.html
+++ b/src/main/resources/static/welcome.html
@@ -1,81 +1,109 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+﻿<!DOCTYPE html>
+<html lang="zh">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>js简单图片轮播切换</title>
-<link href="/css/css.css" rel="stylesheet" type="text/css" />
-<SCRIPT src="js/js.js" type=text/javascript></SCRIPT>
+<meta charset="UTF-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge"><!--ie使用edge渲染模式-->
+<meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" id="viewport" name="viewport">
+<meta name="renderer" content="webkit"><!--360渲染模式-->
+<meta name="format-detection" content="telephone=notelphone=no, email=no" />
+<meta name="description" content="" />
+<meta name="keywords" content="" />
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+<meta name="apple-touch-fullscreen" content="yes"><!-- 是否启用 WebApp 全屏模式，删除苹果默认的工具栏和菜单栏 -->
+<meta name="apple-mobile-web-app-status-bar-style" content="black"><!-- 设置苹果工具栏颜色:默认值为 default，可以定为 black和 black-translucent-->
+<meta http-equiv="Cache-Control" content="no-siteapp" /><!-- 不让百度转码 -->
+<meta name="HandheldFriendly" content="true"><!-- 针对手持设备优化，主要是针对一些老的不识别viewport的浏览器，比如黑莓 -->
+<meta name="MobileOptimized" content="320"><!-- 微软的老式浏览器 -->
+<meta name="screen-orientation" content="portrait"><!-- uc强制竖屏 -->
+<meta name="x5-orientation" content="portrait"><!-- QQ强制竖屏 -->
+<meta name="browsermode" content="application"><!-- UC应用模式 -->
+<meta name="x5-page-mode" content="app"><!-- QQ应用模式 -->
+<meta name="msapplication-tap-highlight" content="no"><!-- windows phone 点击无高光 -->
+<title>jQuery响应式图片切换代码 - 站长素材</title>
+<link rel="stylesheet" href="/css/index.css" />
+	<script src="js/jquery-1.11.3.min.js"></script>
+	<script type="text/javascript">
+		window.onload=function()
+        {
+            $.get("/image/selectStatus", function (data) {
+                var data1 = JSON.parse(data);
+                console.log(data1)
+                $.each(data1, function (index, obj) {
+                    if (index == 3) {
+                        $("#img4").attr("src", obj.iurl);
+                    }
+                    if (index == 2) {
+                        $("#img3").attr("src", obj.iurl);
+                    }
+                    if (index == 1) {
+                        $("#img2").attr("src", obj.iurl);
+                    }
+                    if (index == 0) {
+                        $("#img1").attr("src", obj.iurl);
+                    }
+                })
+            })
+        }
+	</script>
 
 </head>
 <body>
-<center>
-<div id="ifocus">
- <div id="ifocus_pic">
-  <div id="ifocus_piclist" style="left:0; top:0;">
-   <ul>
-    <li><a href="#"><img src="/img/shangshi04.jpg" alt="" /></a></li>
-    <li><a href="#"><img src="/img/shangshi01.jpg" alt="" /></a></li>
-    <li><a href="#"><img src="/img/shangshi02.jpg" alt="" /></a></li>
-    <li><a href="#"><img src="/img/shangshi03.jpg" alt="" /></a></li>
-   </ul>
-  </div>
-  <div id="ifocus_opdiv"></div>
-  <div id="ifocus_tx">
-   <ul>
-    <li class="current">忧伤在我心中沉静下来，宛如降临在寂静山林中的夜色</li>
-    <li class="normal">我就像一只停泊在海滩上的小船，聆听着晚潮奏</li>
-    <li class="normal">生命是上天赋予的，我们惟有献出生命，才能真正得到它</li>
-    <li class="normal">今天大地在阳光下向我细语，用一种已被遗忘的语言</li>
-   </ul>
-  </div>
- </div>
- <div id="ifocus_btn">
-  <ul>
-   <li class="current"><img src="/img/shangshi04.jpg" alt="" /></li>
-   <li class="normal"><img src="/img/shangshi01.jpg" alt="" /></li>
-   <li class="normal"><img src="/img/shangshi02.jpg" alt="" /></li>
-   <li class="normal"><img src="/img/shangshi03.jpg" alt="" /></li>
-  </ul>
- </div>
+<div class="js-silder">
+   <div class="silder-scroll">
+		<div class="silder-main">
+			<div class="silder-main-img">
+				<img id="img1" alt="">
+			</div>
+			<div class="silder-main-img">
+				<img id="img2" alt="">
+			</div>
+			<div class="silder-main-img">
+				<img id="img3" alt="">
+			</div>
+			<div class="silder-main-img">
+				<img id="img4" alt="">
+			</div>
+		</div>
+	</div>
 </div>
-<div>
- <div class="fl">分享到：</div>
- <div onclick="subinfo()">
-  <img src="http://zixuephp.net/static/images/qqzoneshare.png" width="30">
- </div>
- <div onclick="subinfo1()">
-  <img src="http://zixuephp.net/static/images/sinaweiboshare.png" width="36">
- </div>
- <div onclick="shareToqq1()">
-    <img src="http://zixuephp.net/static/images/qqshare.png" />
- </div>
- </div>
-</center>
-<meta name="description" content="wangweixiang">
-</body>
+<pre>
+<div id="div-left">
+	<ul>
+		<li>智</li>
+		<li>圆</li>
+		<li>行</li>
+		<li>方</li>
+	</ul>
+</div>
+<div id="div-right">
+	<ul>
+		<li>应</li>
+		<li>天</li>
+		<li>归</li>
+		<li>德</li>
+	</ul>
+</div>
+
+</pre>
+<div id="div-wang">
+	欢迎来到商丘师范学院学生管理系统
+</div>
+<script src="/js/jquery-1.11.3.min.js" type="text/javascript"></script>
+<script src="/js/wySilder.min.js" type="text/javascript"></script>
 <script>
- //qq
-
-    function shareToqq1(){
-        window.open("http://connect.qq.com/widget/shareqq/index.html?url=http://www.sevenphp.com/test/test.html&amp;desc=邀请详情&amp;title=标题&amp;summary=简介");
-    }
-    //qq空间接口的传参
-
-    function shareToQq(title,url,picurl){
-        var shareqqzonestring='http://sns.qzone.qq.com/cgi-bin/qzshare/cgi_qzshare_onekey?summary='+title+'&url='+url+'&pics='+picurl;
-        window.open(shareqqzonestring,'newwindow','height=400,width=400,top=100,left=100');
-    }
-    function subinfo(){
-        shareToQq("测试标题","www.baidu.com","http://aladdin-vray.oss-cn-beijing.aliyuncs.com/Other/80de988c-ad11-449b-af48-b5341c957668.jpg");
-    }
-
-    //新浪微博接口的传参
-    function shareToXl(title,url,picurl){
-        var sharesinastring='http://v.t.sina.com.cn/share/share.php?title='+title+'&url='+url+'&content=utf-8&sourceUrl='+url+'&pic='+picurl;
-        window.open(sharesinastring,'newwindow','height=400,width=400,top=100,left=100');
-    }
-    function subinfo1(){
-        shareToXl("测试标题","http://localhost:8080/login","http://aladdin-vray.oss-cn-beijing.aliyuncs.com/Other/80de988c-ad11-449b-af48-b5341c957668.jpg");
-    }
+	$(function (){
+		$(".js-silder").silder({
+			auto: true,//自动播放，传入任何可以转化为true的值都会自动轮播
+            captions: true,//自动控制
+			speed: 20,//轮播图运动速度
+			sideCtrl: true,//是否需要侧边控制按钮
+			bottomCtrl: true,//是否需要底部控制按钮
+			defaultView: 0,//默认显示的索引
+			interval: 1500,//自动轮播的时间，以毫秒为单位，默认3000毫秒
+			activeClass: "active",//小的控制按钮激活的样式，不包括作用两边，默认active
+		});
+	});
 </script>
+
+</body>
 </html>
