--- a/src/main/resources/static/drom-add.html
+++ b/src/main/resources/static/drom-add.html
@@ -21,10 +21,10 @@
     </script>
     <style>
         .adddrom{
-            width: 200px;
-            height: 30px;
-            border-radius: 2px;
-        }
+               width: 200px;
+               height: 30px;
+               border-radius: 2px;
+           }
         .add1{
             width: 50px;
             height: 30px;
@@ -37,10 +37,10 @@
 <body>
 <div id="adddrom01" style="display:block">
     <form action="/drom/adddrom" method="get">
-        宿舍分类： <pre>       <select class="adddrom" name="dtype"><option>男生公寓</option><option>女生公寓</option></select></pre>
-        宿舍楼号： <pre>       <input class="adddrom" type="text" name="dnumber" placeholder="请输入宿舍楼号"></pre>
-        宿舍楼层： <pre>       <input class="adddrom" type="text" name="dfloor" placeholder="请输入宿舍楼层"></pre>
-        宿舍号：   <pre>       <input class="adddrom" type="text" name="dnumber1" placeholder="请输入宿舍号"></pre>
+        宿舍分类： <pre>       <select class="adddrom" id="type1" name="dtype"><option>男生公寓</option><option>女生公寓</option></select></pre>
+        宿舍楼号： <pre>       <input class="adddrom" type="text" id="dnumber" name="dnumber" placeholder="请输入宿舍楼号"></pre>
+        宿舍楼层： <pre>       <input class="adddrom" type="text" id="dfloor" name="dfloor" placeholder="请输入宿舍楼层"></pre>
+        宿舍号：   <pre>       <input class="adddrom" type="text" onchange="methodA()" id="dnumber1" name="dnumber1" placeholder="请输入宿舍号"><span id="dnumberspan"></span></pre>
         学院：     <pre>       <select class="adddrom" type="text" name="dxy" id="xy" onchange="select()"><option>请选择学院</option></select></pre>
         专业：     <pre>       <select class="adddrom" type="text" name="dzy" id="zy" onchange="ZYchange()"><option>请选择专业</option></select></pre>
         班级：     <pre>       <select class="adddrom" type="text" name="dclass" id="cla" ><option>请选择班级</option></select></pre>
@@ -50,7 +50,7 @@
                   <pre>       <input class="adddrom" type="text" name="dprople3" placeholder="请输入宿舍成员"></pre>
                   <pre>       <input class="adddrom" type="text" name="dprople4" placeholder="请输入宿舍成员"></pre>
                   <pre>       <input class="adddrom" type="text" name="dprople5" placeholder="请输入宿舍成员"></pre>
-        <pre>      <input class="add1" type="button" value="取消" id="qx" onclick="window.location.href='/drom-list.html'">                <input class="add1" type="submit" value="提交" id="true"></pre>
+        <pre>      <input class="add1" type="button" value="取消" id="qx" onclick="window.location.href='/drom-list.html'">             <input class="add1" type="button" value="提交" onclick="methodBtn()">   <input class="add1" type="submit" value="提交" id="true" style="display: none"></pre>
     </form>
 </div>
 <!--<script>
@@ -63,8 +63,19 @@
     }
 
 </script>-->
+<div id="div1" style="width: 200px;height: 200px;background-color: #00b7ee;position: absolute;right: 300px;top: 500px;display: none">
+
+</div>
 </body>
 <script>
+    function methodBtn() {
+        if($("#dnumber").val()==""||$("#dfloor").val()==""||$("#dnumber1").val()==""){
+                $("#div1").show();
+                $("#div1").html("<p>信息填写不完整</p>");
+                return;
+        }
+        $("#true").click();
+    }
     function select() {
         console.log($("#xy").val())
         if($("#xy").val()=="请选择学院"){
@@ -94,6 +105,22 @@
             for (var i=0;i<list.length;i++){
                 str1="<option value='"+list[i].id+"'>"+list[i].cname+"</option>"
                 $("#cla").append(str1);
+            }
+        })
+    }
+    function methodA() {
+        if($("#dnumber1").text()==""){
+            $("#dnumberspan").text("请正确填写宿舍号！")
+        }
+        $("#dnumberspan").text("")
+        $.ajax({
+            method:"get",
+            url:"/drom/selectDromOne",
+            data:{"dtype":$("#type1").val(),"dnumber1":$("#dnumber1").val()},
+            success:function (data) {
+                if(data.length>0){
+                $("#dnumberspan").text(data);
+                }
             }
         })
     }
