--- a/src/main/resources/static/drom-list.html
+++ b/src/main/resources/static/drom-list.html
@@ -10,6 +10,7 @@
     <!--[if lt IE 9]>
     <script type="text/javascript" src="/lib/html5shiv.js"></script>
     <script type="text/javascript" src="/lib/respond.min.js"></script>
+    <script type="text/javascript" src="/js/layer.js"></script>
     <![endif]-->
     <link rel="stylesheet" type="text/css" href="/h-ui/css/H-ui.min.css" />
     <link rel="stylesheet" type="text/css" href="/h-ui.admin/css/H-ui.admin.css" />
@@ -20,11 +21,19 @@
     <script type="text/javascript" src="/lib/DD_belatedPNG_0.0.8a-min.js" ></script>
     <script>DD_belatedPNG.fix('*');</script>
     <![endif]-->
-    <title>图片列表</title>
+    <title>宿舍列表</title>
+    <style>
+        .adddrom{
+            width: 200px;
+            height: 30px;
+            border-radius: 2px;
+        }
+    </style>
     <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
     <script>
         $(function () {
             var tmp1="";
+            var col="";
             $.ajax({
                 type: "GET",
                 url: "/drom/selectAll",
@@ -33,6 +42,24 @@
                     $("#count").text(data.length)
                     console.log(data)
                     $.each(data,function (index,obj) {
+                        $.get("/college/xyOne",{"id":obj.dxy},function (data1) {
+                            var data1=JSON.parse(data1);
+                            tmp1=data1.xyName;
+                            console.log(tmp1)
+                            $("#"+obj.id+'td1').text(tmp1)
+                        })
+                        $.get("/college/zyOne",{"id":obj.dzy},function (data1) {
+                            var data1=JSON.parse(data1);
+                            tmp1=data1.zyName;
+                            console.log(tmp1)
+                            $("#"+obj.id+'td2').text(tmp1)
+                        })
+                        $.get("/college/claOne",{"id":obj.dclass},function (data1) {
+                            var data1=JSON.parse(data1);
+                            tmp1=data1.cname;
+                            console.log(tmp1)
+                            $("#"+obj.id+'td3').text(tmp1)
+                        })
                         $("tbody").append("<tr class=\"text-c\">" +
                             "<td><input name='' type='checkbox' value=''></td>" +
                             "<td>"+(index+1)+"</td>" +
@@ -40,12 +67,12 @@
                             "<td>"+obj.dnumber+"</td>" +
                             "<td>"+obj.dfloor+"</td>" +
                             "<td>"+obj.dnumber1+"</td>" +
-                            "<td>"+obj.dxy+"</td>" +
-                            "<td>"+obj.dzy+"</td>" +
-                            "<td>"+obj.dclass+"</td>" +
+                            "<td id="+obj.id+'td1'+"></td>" +
+                            "<td id="+obj.id+'td2'+"></td>" +
+                            "<td id="+obj.id+'td3'+"></td>" +
                             "<td>"+obj.dprople+"&nbsp;"+obj.dprople1+"&nbsp;"+obj.dprople2+"&nbsp;"+obj.dprople3+"&nbsp;"+obj.dprople4+"&nbsp;"+obj.dprople5+"</td>" +
                             "<td>"+obj.dstatus+"</td>" +
-                            "<td style='width: 150px'>&nbsp;<button>修改</button>&nbsp;&nbsp;&nbsp;<button>删除</button></td>" +
+                            "<td style='width: 150px'>&nbsp;<button onclick='updateOne("+obj.id+")'>修改</button>&nbsp;&nbsp;&nbsp;<button>删除</button></td>" +
                             "</tr>")
                     })
                 }
@@ -59,7 +86,6 @@
                     dataType: "json",
                     success: function(data){
                         $("#count").text(data.length)
-                        console.log(data)
                         $.each(data,function (index,obj) {
                             $("tbody").append("<tr class=\"text-c\">" +
                                 "<td><input name='' type='checkbox' value=''></td>" +
@@ -73,7 +99,7 @@
                                 "<td>"+obj.dclass+"</td>" +
                                 "<td>"+obj.dprople+"&nbsp;"+obj.dprople1+"&nbsp;"+obj.dprople2+"&nbsp;"+obj.dprople3+"&nbsp;"+obj.dprople4+"&nbsp;"+obj.dprople5+"</td>" +
                                 "<td>"+obj.dstatus+"</td>" +
-                                "<td style='width: 150px'>&nbsp;<button>修改</button>&nbsp;&nbsp;&nbsp;<button>删除</button></td>" +
+                                "<td style='width: 150px'>&nbsp;<button onclick='updateOne("+obj.id+")'>修改</button>&nbsp;&nbsp;&nbsp;<button>删除</button></td>" +
                                 "</tr>")
                         })
                     }
@@ -81,6 +107,11 @@
             })
         })
     </script>
+
+
+
+
+
 </head>
 <body>
 <nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 宿舍管理 <span class="c-gray en">&gt;</span> 图片列表 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
@@ -116,7 +147,6 @@
         </table>
     </div>
 </div>
-
 <!--_footer 作为公共模版分离出去-->
 <script type="text/javascript" src="/lib/jquery/1.9.1/jquery.min.js"></script>
 <script type="text/javascript" src="/lib/layer/2.4/layer.js"></script>
@@ -129,4 +159,50 @@
 <script type="text/javascript" src="/lib/laypage/1.2/laypage.js"></script>
 
 </body>
+<script>
+    function updateOne(tmp) {
+        console.log(tmp);
+        $.ajax({
+            method:"get",
+            url:"/drom/updateDrom",
+            data:{
+                id:tmp
+            },success:function () {
+                window.location.href="/update-drom.html"
+            }
+        })
+    }
+    /*  function updateOne(tmp) {
+        console.log(tmp);
+
+       layer.open({
+             title: '在线调试',
+             area: ['400px', '550px'],
+             content: '<html><head></head><body><table>' +
+                 '<tr><th>学院</th><th> <select class="adddrom" type="text" name="dxy" id="xy" onchange="select()"><option>请选择学院</option></select></th></tr>' +
+                 '<tr><th>专业</th><th><select class="adddrom" type="text" name="dzy" id="zy" onchange="ZYchange()"><option>请选择专业</option></select></th></tr>' +
+                 '<tr><th>班级</th><th><select class="adddrom" type="text" name="dclass" id="cla" ><option>请选择班级</option></select></th></tr>' +
+                 '<tr><th>1号床</th><th> <input class="adddrom" type="text" name="dprople" placeholder="请输入宿舍成员"></th></tr>' +
+                 '<tr><th>2号床</th><th><input class="adddrom" type="text" name="dprople1" placeholder="请输入宿舍成员"></th></tr>' +
+                 '<tr><th>3号床</th><th><input class="adddrom" type="text" name="dprople2" placeholder="请输入宿舍成员"></th></tr>' +
+                 '<tr><th>4号床</th><th><input class="adddrom" type="text" name="dprople3" placeholder="请输入宿舍成员"></th></tr>' +
+                 '<tr><th>5号床</th><th><input class="adddrom" type="text" name="dprople4" placeholder="请输入宿舍成员"></th></tr>' +
+                 '<tr><th>6号床</th><th><input class="adddrom" type="text" name="dprople5" placeholder="请输入宿舍成员"></th></tr></table></body></html>',
+             btn: ['取消', '提交'],
+             yes: function(index, layero){
+                 //按钮【按钮一】的回调
+                 console.log("取消");
+                 layer.close(index);
+             },
+             btn2: function(index, layero){
+                 //按钮【按钮二】的回调
+                 console.log("提交")
+                 //return false 开启该代码可禁止点击该按钮关闭
+             },
+             fixed:false,
+             resize:true
+
+         })
+    }*/
+</script>
 </html>
